// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CodeCoverageTable with all prop options: {"repoCoverageList":[{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6cXdwZ3o=","name":"bob-cli","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":86,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6d2phcGI=","name":"demo-go","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":72.12,"bcvIsPassing":false},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6anBnbHo=","name":"marvin-test-coverage","lcvValue":62,"lcvIsPassing":true,"bcvValue":80,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmp2eXo=","name":"asgard","lcvValue":45,"lcvIsPassing":null,"bcvValue":60.8,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6ZXBqZWI=","name":"demo-python","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmpleXo=","name":"marvin-docker","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTpib3BtZXo=","name":"git-label-packages","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6Z2tlZHo=","name":"beacon-py","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null}],"linkedRows":false,"isWidget":false} 1`] = `
"<section class=\\"hide-scroll overflow-x-auto leading-normal rounded-md border border-slate-400\\">
  <table class=\\"cursor w-full table-fixed\\">
    <thead class=\\"border-b border-slate-400\\">
      <tr class=\\"text-xs font-semibold uppercase text-vanilla-400\\">
        <th class=\\"w-48 py-2.5 text-left font-semibold pl-4 sm:w-auto\\">
          Repository
        </th>
        <th class=\\"text-right w-40 pr-2\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"lcv\\" default-label=\\"Line Coverage\\"></codecoveragesort-stub>
        </th>
        <th class=\\"text-right w-48 pr-2\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"bcv\\" default-label=\\"Branch Coverage\\"></codecoveragesort-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-200\\">
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/bob-cli/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                bob-cli
              </span></div>
        </td>
        <codecoveragetablecell-stub value=\\"72.12\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-passing=\\"true\\" value=\\"86\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/demo-go/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                demo-go
              </span></div>
        </td>
        <codecoveragetablecell-stub value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/marvin-test-coverage/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-test-coverage
              </span></div>
        </td>
        <codecoveragetablecell-stub is-passing=\\"true\\" value=\\"62\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-passing=\\"true\\" value=\\"80\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/asgard/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                asgard
              </span></div>
        </td>
        <codecoveragetablecell-stub value=\\"45\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub value=\\"60.8\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/demo-python/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                demo-python
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/marvin-docker/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-docker
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/git-label-packages/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                git-label-packages
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/beacon-py/metrics/LCV\\" class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                beacon-py
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
      </tr>
    </tbody>
  </table>
</section>"
`;

exports[`renders CodeCoverageTable with all prop options: {"repoCoverageList":[{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6cXdwZ3o=","name":"bob-cli","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":86,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6d2phcGI=","name":"demo-go","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":72.12,"bcvIsPassing":false},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6anBnbHo=","name":"marvin-test-coverage","lcvValue":62,"lcvIsPassing":true,"bcvValue":80,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmp2eXo=","name":"asgard","lcvValue":45,"lcvIsPassing":null,"bcvValue":60.8,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6ZXBqZWI=","name":"demo-python","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmpleXo=","name":"marvin-docker","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTpib3BtZXo=","name":"git-label-packages","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6Z2tlZHo=","name":"beacon-py","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null}],"linkedRows":false,"isWidget":true} 1`] = `
"<section class=\\"hide-scroll overflow-x-auto leading-normal max-h-92 overflow-y-scroll\\">
  <table class=\\"cursor w-full table-fixed\\">
    <thead class=\\"border-b border-slate-400\\">
      <tr class=\\"text-xs font-semibold uppercase text-vanilla-400\\">
        <th class=\\"w-48 py-2.5 text-left font-semibold pl-5\\">
          Repository
        </th>
        <th class=\\"text-right w-28\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"lcv\\" default-label=\\"Line\\" is-widget=\\"true\\"></codecoveragesort-stub>
        </th>
        <th class=\\"text-right w-28 pr-5\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"bcv\\" default-label=\\"Branch\\" is-widget=\\"true\\"></codecoveragesort-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-300\\">
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/bob-cli/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                bob-cli
              </span></div>
        </td>
        <codecoveragetablecell-stub value=\\"72.12\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-passing=\\"true\\" is-widget=\\"true\\" value=\\"86\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/demo-go/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                demo-go
              </span></div>
        </td>
        <codecoveragetablecell-stub value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-widget=\\"true\\" value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/marvin-test-coverage/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-test-coverage
              </span></div>
        </td>
        <codecoveragetablecell-stub is-passing=\\"true\\" value=\\"62\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-passing=\\"true\\" is-widget=\\"true\\" value=\\"80\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/asgard/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                asgard
              </span></div>
        </td>
        <codecoveragetablecell-stub value=\\"45\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-widget=\\"true\\" value=\\"60.8\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/demo-python/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                demo-python
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-widget=\\"true\\" repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/marvin-docker/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-docker
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-widget=\\"true\\" repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/git-label-packages/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                git-label-packages
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-widget=\\"true\\" repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"\\">
        <td class=\\"truncate text-left text-sm\\">
          <div to=\\"/gh/deepsourcelabs/bifrost/beacon-py/metrics/LCV\\" class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                beacon-py
              </span></div>
        </td>
        <codecoveragetablecell-stub repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub is-widget=\\"true\\" repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
      </tr>
    </tbody>
  </table>
</section>"
`;

exports[`renders CodeCoverageTable with all prop options: {"repoCoverageList":[{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6cXdwZ3o=","name":"bob-cli","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":86,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6d2phcGI=","name":"demo-go","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":72.12,"bcvIsPassing":false},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6anBnbHo=","name":"marvin-test-coverage","lcvValue":62,"lcvIsPassing":true,"bcvValue":80,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmp2eXo=","name":"asgard","lcvValue":45,"lcvIsPassing":null,"bcvValue":60.8,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6ZXBqZWI=","name":"demo-python","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmpleXo=","name":"marvin-docker","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTpib3BtZXo=","name":"git-label-packages","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6Z2tlZHo=","name":"beacon-py","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null}],"linkedRows":true,"isWidget":false} 1`] = `
"<section class=\\"hide-scroll overflow-x-auto leading-normal rounded-md border border-slate-400\\">
  <table class=\\"cursor w-full table-fixed\\">
    <thead class=\\"border-b border-slate-400\\">
      <tr class=\\"text-xs font-semibold uppercase text-vanilla-400\\">
        <th class=\\"w-48 py-2.5 text-left font-semibold pl-4 sm:w-auto\\">
          Repository
        </th>
        <th class=\\"text-right w-40 pr-2\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"lcv\\" default-label=\\"Line Coverage\\"></codecoveragesort-stub>
        </th>
        <th class=\\"text-right w-48 pr-2\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"bcv\\" default-label=\\"Branch Coverage\\"></codecoveragesort-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-200\\">
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                bob-cli
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"72.12\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-passing=\\"true\\" value=\\"86\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                demo-go
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-test-coverage
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-passing=\\"true\\" value=\\"62\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-passing=\\"true\\" value=\\"80\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                asgard
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"45\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"60.8\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                demo-python
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-docker
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                git-label-packages
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-4\\"><span class=\\"v-popper--has-tooltip\\">
                beacon-py
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
      </tr>
    </tbody>
  </table>
</section>"
`;

exports[`renders CodeCoverageTable with all prop options: {"repoCoverageList":[{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6cXdwZ3o=","name":"bob-cli","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":86,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6d2phcGI=","name":"demo-go","lcvValue":72.12,"lcvIsPassing":false,"bcvValue":72.12,"bcvIsPassing":false},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6anBnbHo=","name":"marvin-test-coverage","lcvValue":62,"lcvIsPassing":true,"bcvValue":80,"bcvIsPassing":true},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmp2eXo=","name":"asgard","lcvValue":45,"lcvIsPassing":null,"bcvValue":60.8,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6ZXBqZWI=","name":"demo-python","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6dmpleXo=","name":"marvin-docker","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTpib3BtZXo=","name":"git-label-packages","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null},{"id":"UmVwb3NpdG9yeUNvdmVyYWdlUmVwb3J0SXRlbTp6Z2tlZHo=","name":"beacon-py","lcvValue":null,"lcvIsPassing":null,"bcvValue":null,"bcvIsPassing":null}],"linkedRows":true,"isWidget":true} 1`] = `
"<section class=\\"hide-scroll overflow-x-auto leading-normal max-h-92 overflow-y-scroll\\">
  <table class=\\"cursor w-full table-fixed\\">
    <thead class=\\"border-b border-slate-400\\">
      <tr class=\\"text-xs font-semibold uppercase text-vanilla-400\\">
        <th class=\\"w-48 py-2.5 text-left font-semibold pl-5\\">
          Repository
        </th>
        <th class=\\"text-right w-28\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"lcv\\" default-label=\\"Line\\" is-widget=\\"true\\"></codecoveragesort-stub>
        </th>
        <th class=\\"text-right w-28 pr-5\\">
          <codecoveragesort-stub coverage-filters=\\"[object Object]\\" coverage-type=\\"bcv\\" default-label=\\"Branch\\" is-widget=\\"true\\"></codecoveragesort-stub>
        </th>
      </tr>
    </thead>
    <tbody class=\\"divide-y divide-ink-300\\">
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                bob-cli
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"72.12\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-passing=\\"true\\" is-widget=\\"true\\" value=\\"86\\" repo-name=\\"bob-cli\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                demo-go
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-widget=\\"true\\" value=\\"72.12\\" repo-name=\\"demo-go\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-test-coverage
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-passing=\\"true\\" value=\\"62\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-passing=\\"true\\" is-widget=\\"true\\" value=\\"80\\" repo-name=\\"marvin-test-coverage\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                asgard
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" value=\\"45\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-widget=\\"true\\" value=\\"60.8\\" repo-name=\\"asgard\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                demo-python
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-widget=\\"true\\" repo-name=\\"demo-python\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                marvin-docker
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-widget=\\"true\\" repo-name=\\"marvin-docker\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                git-label-packages
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-widget=\\"true\\" repo-name=\\"git-label-packages\\"></codecoveragetablecell-stub>
      </tr>
      <tr class=\\"hover:bg-ink-300\\">
        <td class=\\"truncate text-left text-sm\\"><a class=\\"block py-2.5 pl-5\\"><span class=\\"v-popper--has-tooltip\\">
                beacon-py
              </span></a></td>
        <codecoveragetablecell-stub linked-cell=\\"true\\" repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
        <codecoveragetablecell-stub linked-cell=\\"true\\" is-widget=\\"true\\" repo-name=\\"beacon-py\\"></codecoveragetablecell-stub>
      </tr>
    </tbody>
  </table>
</section>"
`;
